--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     gtag('config', 'UA-116680583-1');
   </script>
   <meta charset="UTF-8">
-  <title>بذار من برات گوگل کنم</title>
+  <title>گوگل -مخصوص آدم های بی حال !</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta http-equiv="ImageToolbar" content="No" />
   <meta name="MSSmartTagsPreventParsing" content="True" />
   <meta http-equiv="Expires" content="0" />
   <meta http-equiv="Pragma" content="No-Cache" />
   <meta http-equiv="Cache-Control" content="No-Cache,Must-Revalidate,No-Store" />
-  <meta content="برای آدم‌هایی که از سوال هایی که با یک گوگل می شه در موردش به جواب رسید، خسته هستن" name="description" />
-  <meta content="گوگل, جادی, سرچ, google" name="keywords" />
+  <meta content="برای آدم‌های بی حالی که از سوال هایی که با یک گوگل می شه در موردش به جواب رسید، خسته هستن" name="description" />
+  <meta content="گوگل, گوگل شیرازی, سرچ, google" name="keywords" />
 
   <link href="favicon.ico" type="image/x-icon" rel="icon" />
   <link title="LMGTFY" href="lmgtfy.xml" type="application/opensearchdescription+xml" rel="search" />
@@ -40,7 +40,7 @@
   <center>
     <div class="c1">
       <div class="logo">
-        <span>بذار من برات</span>
+        <span>میدونم خسته ای ! بذار برات </span>
         <img id="logo" src="l_files/logo.png" alt="Logo" />
         <span> کنم</span>
       </div>
