--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116680583-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
 
@@ -81,8 +80,8 @@
   </div>
   </div>
   <div id="footer">
-    <a href="mailto:admin@lmgtfy.me.uk?body=Nice&amp;subject=I%20love%20LMGTFY%21" rel="localize[contact]">نویسنده اصلی</a> |
-    <a href="http://jadi.net" rel="localize[advertise]">جادی.نت</a>
+    
+    <a href="http://hicdn.ir" rel="localize[advertise]">HiCDN</a>
   </div>
   <div id="about" class="c2">
     <p>برای کسانی که هی ازشون سوالاتی می‌شه که با یک گوگل ساده می شه به جوابش رسید.</p>
@@ -91,12 +90,7 @@
   <div id="copyright"> LMGTFY, 2011 |
     <span>GOOGLE is a trademark of Google Inc.</span>
     <br>
-    <p>
-      برای اصلاحات و تغییرات
-      <a href="https://github.com/jadijadi/re-lmgtfy">
-        https://github.com/jadijadi/re-lmgtfy
-      </a>
-    </p>
+    
     <br />
   </div>
   <img id="fake_mouse" class="c3" src="l_files/mouse_arrow.png" alt="Mouse" />
